export enum FormElementType {
  inputText = 'text',
  inputDate = 'date',
  inputTime = 'time',
  inputDateTime = 'datetime',
  textarea = 'textarea'
}
